uuid for logarion archive

--- a/web.toml
+++ b/web.toml
@@ -1,7 +1,8 @@
 [general]
-url = "http://localhost:3000/"
+url  = "http://localhost:3666/"
 port = 3666
 stylesheets = [ "style.css" ]
+uuid =
 
 [templates]
 header = "share/html_templates/header.mustache"
