Revises web module's configuration
Moved template paths' record to template module.
Introduced templates directory parameter in web.toml.
Changed web configuration names to make them shorter.
More renames of text to note, where applicable.

--- a/web.toml
+++ b/web.toml
@@ -1,13 +1,14 @@
 [general]
 url  = "http://localhost:3666"
 port = 3666
+
 stylesheets = [ "style.css" ]
 static_dir  = "share/static"
-uuid = ""
 
 [templates]
-header = "share/html_templates/header.mustache"
-index  = "share/html_templates/index.mustache"
-listing = "share/html_templates/listing.mustache"
-listing_entry = "share/html_templates/listing-entry.mustache"
-text   = "share/html_templates/text.mustache"
+dir    = "share/html_templates"
+header = "header.mustache"
+note   = "note.mustache"
+front  = "frontpage.mustache"
+list   = "list.mustache"
+item   = "item.mustache"
