Switches to building to Jbuilder
Squashed commit of the following:

commit f9c6c81ab1658b578ddd8fddcd6d1e130042c521
Author: Stavros Polymenis <sp@orbitalfox.com>
Date:   Sun Aug 6 22:25:51 2017 +0100

    Changes ignored files

commit 1e3bc2b9dc26bbc386235d7e0b4b04228fd1fc3c
Author: Stavros Polymenis <sp@orbitalfox.com>
Date:   Sat Aug 5 22:29:55 2017 +0100

    Renamed core to Logarion and converts webserver to jbuild

commit c1c773da92f9a1627b09526395c8103298644c69
Author: Stavros Polymenis <sp@orbitalfox.com>
Date:   Sat Aug 5 18:10:21 2017 +0100

    Completes conversion of logarion compilation to jbuild

commit e74c864f6daa95415bc2a17ddd7a1299769dce74
Author: Stavros Polymenis <sp@orbitalfox.com>
Date:   Sat Aug 5 15:39:34 2017 +0100

    wip: switching to jbuilder

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
-ymd/
+.merlin
+notes
+ymd
 \#*\#
-.\#*
-*.cmx
+.\#*1
 *~
 *.o
 *.native
-setup.*
-configure
-myocamlbuild.ml
-*.txt
-*.mldylib
-*.mllib
-logarion
-META
 _build
-_tags
